Added usage page text

--- a/killerdev-website/usage.html
+++ b/killerdev-website/usage.html
@@ -20,7 +20,34 @@
 	</div>
 
 	<div class="section">
-	
+		<div class="sub-section">
+                <h1 class="section-title">How it works</h1>
+                <h2>Se&ntildeal alerts your friends if you can't.</h2>
+                <p>Text Se&ntildeal if you are ever concerned for your safety. Se&ntildeal will check-in with you
+                	in 10 minutes. Text back to let Se&ntildeal know you're OK, otherwise, we'll alert your 2-5 contacts. 
+                	<br>To sign up, text a blank message to 999-999-9999. 
+                	<br>
+              	    <br>Normal text messaging rates apply.
+              	    <br>Cancel anytime.
+					<br>
+					<br>
+					<h1 class="section-title">C&oacutemo funciona</h1>
+					<h2>Se&ntildeal avisa a tus amigos si usted no puede.</h2>
+					<p>Mande un SMS a Se&ntildeal si tiene cualquier preocupaci&oacuten sobre su seguridad. En
+						diez minutos, Se&ntildeal averiguara con usted. Responda si est&aacute bien, y si no, Se&ntildeal avisara a sus 2-5 contactos. 
+					<br>
+					<br>Para inscribirse, mande un SMS blanco a 999-999-9999.
+					<br>Cancela en cualquier momento.
+                </p>
+                <p>
+                    Trusted sources: here.
+                </p>
+            </div>
+            <div class="sub-section">
+                <h1 class="section-title">Did you know?</h1>
+                <p>Some info graphic here.</p>	
+            </div>
+        </div>
 	</div>
 	
 </div>
