more usage.html text and added help and privacy pages

--- a/killerdev-website/help.html
+++ b/killerdev-website/help.html
@@ -20,22 +20,29 @@
                 <li><a href="info.html">Info About Workers Centers </a></li>
             </ul>
         </div>
-        <div class="section">
+		<div class="section">
             <div class="sub-section">
-                <h1 class="section-title">We're here to remind you of your rights!</h1>
+                <h1 class="section-title">General Questions</h1>
+                <h2>What happens when I text my unique code to Se&ntildeal?</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quibusdam libero vero voluptatibus accusantium eligendi, neque, distinctio provident debitis sunt laborum voluptates explicabo amet molestias repudiandae. Quam soluta placeat deleniti!
-                    <br>
-                    <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis repellat deserunt magni eaque natus impedit voluptates explicabo nobis amet perferendis sapiente aspernatur fuga at, sequi necessitatibus minima neque! Cum, nisi.
+                    Technical details.
                 </p>
+                <br>
+                <h1 class="section-title">Preguntas Generales</h1>
+                <h2>&iquestQu&eacute pasa cuando mando un SMS con mi clave &uacutenico a Se&ntildeal?</h2>
                 <p>
-                    Trusted sources: here.
+                    Detalles t&eacutecnicos.
                 </p>
             </div>
             <div class="sub-section">
-                <h1 class="section-title">Did you know?</h1>
-                <p>Some info graphic here.</p>
-            </div>
+                <h1 class="section-title">Contact Us</h1>
+                <p>
+                    E-mail us at contact@alertapp.com.
+                </p>
+                <h1 class="section-title">Contacto</h1>
+                <p>
+                    Mande correo electr&oacutenico a contact@alertapp.com.
+                </p>
         </div>
     </div>
     <script src="js/functionality.js"></script>
