--- a/killerdev-website/privacy.html
+++ b/killerdev-website/privacy.html
@@ -20,16 +20,26 @@
                 <li><a href="info.html">Info About Workers Centers </a></li>
             </ul>
         </div>
-        <div class="section">
+		<div class="section">
             <div class="sub-section">
-                <h1 class="section-title">We're here to remind you of your rights!</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quibusdam libero vero voluptatibus accusantium eligendi, neque, distinctio provident debitis sunt laborum voluptates explicabo amet molestias repudiandae. Quam soluta placeat deleniti!
-                    <br>
-                    <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis repellat deserunt magni eaque natus impedit voluptates explicabo nobis amet perferendis sapiente aspernatur fuga at, sequi necessitatibus minima neque! Cum, nisi.
+                <h1 class="section-title">Privacy Policy</h1>
+                <h2>Se&ntildeal collects some personal data from its users.</h2>
+                <h2>Personal data are collected for the following purposes.</h2>
+                <p>Unique identification and contacting the user.
                 </p>
-                <p>
-                    Trusted sources: here.
+                <p>Alerting contacts.
+                </p>
+                <p>Backend infrastructure: Amazon Web Services.
+                </p>
+                <br>
+                <h1 class="section-title">Reglas de Seguridad</h1>
+                <h2>Se&ntildeal junta datos personales sobre sus usarios.</h2>
+                <h2>Se usa datos personalas para los servicios siguentes.</h2>
+                <p>Para identificar y contactar el usario.
+                </p>
+                <p>Para avisar al contactos del usario.
+                </p>
+                <p>Web infraestructura de backend: Amazon Web Services.
                 </p>
             </div>
             <div class="sub-section">
