--- a/killerdev-website/index.html
+++ b/killerdev-website/index.html
@@ -14,12 +14,14 @@
             <h1 class="logo"> <a href="index.html" target="_self"> Project Name </a></h1>
             <ul>
                 <li><a href="usage.html">How To Use </a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="help.html">Help</a></li>
                 <li><a href="rights.html">Know Your Rights </a></li>
                 <li><a href="info.html">Info About Workers Centers </a></li>
             </ul>
         </div>
         <div class="section-medium">
-        <h1>Senal: a text messaging app that you can use to alert your contacts whenever you feel unsafe.</h1>
+        <h1>Se&ntildeal: a text messaging app that you can use to alert your contacts whenever you feel unsafe.</h1>
         <h2>The app that works on your flip-phone, iPhone, or Android.</h2>
         </div>
         <div class="section-medium">
