--- a/killerdev-website/info.html
+++ b/killerdev-website/info.html
@@ -14,6 +14,8 @@
             <h1 class="logo"> <a href="index.html" target="_self"> Project Name </a></h1>
             <ul>
                 <li><a href="usage.html">How To Use </a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="help.html">Help</a></li>
                 <li><a href="rights.html">Know Your Rights </a></li>
                 <li><a href="info.html">Info About Workers Centers </a></li>
             </ul>
